--- a/router-database/pom.xml
+++ b/router-database/pom.xml
@@ -10,7 +10,7 @@
         <relativePath>../router-parent/pom.xml</relativePath>
     </parent>
     <groupId>com.al.crm.router</groupId>
-    <artifactId>router-core</artifactId>
+    <artifactId>router-database</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -19,15 +19,19 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-core</artifactId>
-            <version>${spring.version}</version>
+            <groupId>com.al.crm.router</groupId>
+            <artifactId>router-core</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>com.al.crm</groupId>
-            <artifactId>al-telcom</artifactId>
-            <version>1.0.2</version>
+            <groupId>c3p0</groupId>
+            <artifactId>c3p0</artifactId>
+            <version>0.9.1.2</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
     </dependencies>
 </project>
