--- a/router-parent/pom.xml
+++ b/router-parent/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.al.crm</groupId>
+    <groupId>com.al.crm.router</groupId>
     <artifactId>router-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
@@ -114,6 +114,7 @@
     <modules>
         <module>../router-core</module>
         <module>../router-nosql</module>
+        <module>../router-database</module>
     </modules>
     
 </project>
